Refactor the input and output of api gateway
